@@ -99,6 +99,35 @@ sub refs {
     return @refs;
 }
 
+sub ref {
+    my ( $self, $wantref ) = @_;
+    my @refs;
+    foreach my $type (qw(heads remotes tags)) {
+        my $dir = dir( $self->directory, '.git', 'refs', $type );
+        next unless -d $dir;
+        foreach my $file ( $dir->children ) {
+            my $ref = "refs/$type/" . $file->basename;
+            if ( $ref eq $wantref ) {
+                my $sha1 = $file->slurp
+                    || confess("Error reading $file: $!");
+                chomp $sha1;
+                return $self->get_object($sha1);
+            }
+        }
+    }
+    my $packed_refs = file( $self->directory, '.git', 'packed-refs' );
+    if ( -f $packed_refs ) {
+        foreach my $line ( $packed_refs->slurp( chomp => 1 ) ) {
+            next if $line =~ /^#/;
+            my ( $sha1, my $name ) = split ' ', $line;
+            if ( $name eq $wantref ) {
+                return $self->get_object($sha1);
+            }
+        }
+    }
+    return undef;
+}
+
 sub master {
     my $self = shift;
     my $master = file( $self->directory, '.git', 'refs', 'heads', 'master' );
