@@ -7,6 +7,7 @@ Revision history for Perl module Git::PurePerl:
      - add class to talk the git protocol
      - add a method to checkout the head
      - add a method to return the references
+     - add a method to return the commit for a reference
 
 0.38 Thu Dec 18 10:26:49 GMT 2008
      - add init() method to create a new repository
